<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GetOtpFragment">

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintVertical_bias="0.079" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="374dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="0.13">

        <Button
            android:id="@+id/getOtp"
            android:layout_width="191dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:text="@string/get_otp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <ImageView
        android:id="@+id/countryImage"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:src="@drawable/indian_flag"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/phoneNumber"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="361dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/enter_country_code_and_phone_number"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePage" />

    <TextView
        android:id="@+id/titlePage"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/verify_phone_number"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>