<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerifyOtp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/otpPageTitle"
            android:layout_width="381dp"
            android:layout_height="77dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/verify_otp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpMessage"
            android:layout_width="362dp"
            android:layout_height="71dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/enter_otp_sent_to"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpPageTitle" />

        <TextView
            android:id="@+id/mobileNumber"
            android:layout_width="232dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode1"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode2"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode3"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode4"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode5"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

            <EditText
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:id="@+id/inputCode6"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="Label For"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resendOtp"
                android:text="@string/resend_otp"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/verifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/verify"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>